[gd_scene load_steps=16 format=3 uid="uid://b76ooyqr5uj8h"]

[ext_resource type="Resource" uid="uid://dllxikmt4ldra" path="res://Resources/enemies/fireant.tres" id="1_3huwi"]
[ext_resource type="Script" path="res://scripts/battle.gd" id="1_bsgb1"]
[ext_resource type="FontFile" uid="uid://bmuynnr78lkhk" path="res://assets/fonts/terminal-grotesque-webfont.woff" id="2_5fpd8"]
[ext_resource type="Texture2D" uid="uid://ci6rkwrclgsj" path="res://assets/sprites/feuerameise.png" id="3_ho3t7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x11yx"]
bg_color = Color(0.596663, 0, 0.0811091, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_size = 1
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jou5"]
bg_color = Color(0.208327, 0.627507, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo8gk"]
content_margin_left = 17.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhc7w"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3e6gh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uul3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy5li"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bvbh"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8h7vs"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vg5so"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehkh6"]
bg_color = Color(0, 0, 0, 1)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsgb1")
enemy = ExtResource("1_3huwi")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1081.0
offset_bottom = 722.0
metadata/_edit_use_anchors_ = true

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -198.0
offset_right = 194.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_x11yx")
theme_override_styles/fill = SubResource("StyleBoxFlat_4jou5")
step = 1.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 24
text = "HP 50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_ho3t7")
stretch_mode = 5

[node name="AttackTimer" type="Timer" parent="EnemyContainer/Enemy"]
wait_time = 2.0

[node name="HealTimer" type="Timer" parent="EnemyContainer/Enemy"]

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -264.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yo8gk")

[node name="HBoxContainer" type="HBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -10
alignment = 1

[node name="HealLabel" type="Label" parent="ActionPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 40
text = "  Press     to heal"

[node name="HealKey" type="Label" parent="ActionPanel/HBoxContainer/HealLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1

[node name="AttackLabel" type="Label" parent="ActionPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 40
text = "     Press     to attack"

[node name="AttackKey" type="Label" parent="ActionPanel/HBoxContainer/AttackLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1
vertical_alignment = 3

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhc7w")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 50
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 7
theme_override_styles/background = SubResource("StyleBoxFlat_x11yx")
theme_override_styles/fill = SubResource("StyleBoxFlat_4jou5")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 40
text = "HP 50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Run" type="Button" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_3e6gh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3uul3")
theme_override_styles/normal = SubResource("StyleBoxFlat_vy5li")
text = "Run"

[node name="Textbox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8bvbh")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 35
text = "A wild Monster has appeared 
Defend youself!"

[node name="Ticker" type="Button" parent="Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 998.0
offset_top = 70.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5fpd8")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_8h7vs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vg5so")
theme_override_styles/normal = SubResource("StyleBoxFlat_ehkh6")
text = "x"
icon_alignment = 1

[connection signal="lost_battle" from="." to="." method="_on_lost_battle"]
[connection signal="won_battle" from="." to="." method="_on_won_battle"]
[connection signal="timeout" from="EnemyContainer/Enemy/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="EnemyContainer/Enemy/HealTimer" to="." method="_on_heal_timer_timeout"]
[connection signal="pressed" from="PlayerPanel/PlayerData/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Textbox/Ticker" to="." method="_on_ticker_pressed"]
